MyProject/force-app/main/default/objects/Order__x/Order__x.object-meta.xml
<CustomObject>
    <description>Orders</description>
    <externalDataSource>Northwind_OData</externalDataSource>
    <externalName>Orders</externalName>
    <label>Order</label>
    <pluralLabel>Orders</pluralLabel>
</CustomObject>