MyProject/force-app/main/default/objects/Order__x/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <description>CustomerID</description>
    <externalDeveloperName>CustomerID</externalDeveloperName>
    <label>CustomerID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>