MyProject/force-app/main/default/objects/Order__x/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <description>OrderDate</description>
    <externalDeveloperName>OrderDate</externalDeveloperName>
    <label>OrderDate</label>
    <type>DateTime</type>
</CustomField>