MyProject/force-app/main/default/objects/Order__x/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <description>OrderID</description>
    <externalDeveloperName>OrderID</externalDeveloperName>
    <label>OrderID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>