MyProject/force-app/main/default/objects/Order__x/fields/ShipAddress__c.field-meta.xml
<CustomField>
    <fullName>ShipAddress__c</fullName>
    <description>ShipAddress</description>
    <externalDeveloperName>ShipAddress</externalDeveloperName>
    <label>ShipAddress</label>
    <length>128</length>
    <type>Text</type>
</CustomField>