MyProject/force-app/main/default/objects/Order__x/fields/ShipName__c.field-meta.xml
<CustomField>
    <fullName>ShipName__c</fullName>
    <description>ShipName</description>
    <externalDeveloperName>ShipName</externalDeveloperName>
    <label>ShipName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>