MyProject/force-app/main/default/objects/Order__x/fields/ShipRegion__c.field-meta.xml
<CustomField>
    <fullName>ShipRegion__c</fullName>
    <description>ShipRegion</description>
    <externalDeveloperName>ShipRegion</externalDeveloperName>
    <label>ShipRegion</label>
    <length>128</length>
    <type>Text</type>
</CustomField>