MyProject/force-app/main/default/objects/Order__x/fields/ShipVia__c.field-meta.xml
<CustomField>
    <fullName>ShipVia__c</fullName>
    <description>ShipVia</description>
    <externalDeveloperName>ShipVia</externalDeveloperName>
    <label>ShipVia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>